2011-02-07  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Antti Koivisto.

        WebKitTestRunner does not block remote resources or complain about them
        https://bugs.webkit.org/show_bug.cgi?id=42139
        <rdar://problem/8183942>

        * platform/mac-wk2/Skipped: Unskip formerly skipped tests.

2011-02-06  MORITA Hajime  <morrita@google.com>

        Unreviewed, unskip the html5lib test again which fails for another reason. (See Bug 53030)

        * platform/qt/Skipped:

2011-02-06  Dominic Cooney  <dominicc@google.com>

        Reviewed by Dimitri Glazkov.

        Convert <keygen> option elements to a shadow DOM
        https://bugs.webkit.org/show_bug.cgi?id=51379

        * html5lib/runner-expected.txt: Two more tests pass.
        * platform/mac/fast/html/keygen-expected.txt: Shadow render tree.
        * platform/mac/fast/invalid/residual-style-expected.txt:

2011-02-06  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Oliver Hunt.

        Remove empty svg test
        https://bugs.webkit.org/show_bug.cgi?id=53887

        This files are empty.  Empty tests are pretty useless.

        * platform/chromium-win/svg/custom/use-infinite-recursion-expected.png: Removed.
        * platform/mac/svg/custom/use-infinite-recursion-expected.checksum: Removed.
        * platform/mac/svg/custom/use-infinite-recursion-expected.png: Removed.
        * platform/mac/svg/custom/use-infinite-recursion-expected.txt: Removed.
        * platform/qt/svg/custom/use-infinite-recursion-expected.txt: Removed.
        * svg/custom/use-infinite-recursion.svg: Removed.

2011-02-06  Martin Robinson  <mrobinson@igalia.com>

        Reclassify a failing test and unskip another which should be passing now.

        * platform/gtk/Skipped: Update the skipped list.

2011-02-06  Robert Hogan  <robert@webkit.org>

        Unreviewed, skip failing test on Qt bot.

        [Qt]  fast/notifications/notifications-document-close-crash.html fails after r77738