@@ -1027,11 +1027,6 @@ static int copyPathRemovingDots(char* dst, const char* src, int srcStart, int sr
                     baseStringPos += 3;
                     if (dst > bufferPathStart + 1)
                         dst--;
-                    // Note that these two while blocks differ subtly.
-                    // The first helps to remove multiple adjoining slashes as we rewind.
-                    // The +1 to bufferPathStart in the first while block prevents eating a leading slash
-                    while (dst > bufferPathStart + 1 && dst[-1] == '/')
-                        dst--;
                     while (dst > bufferPathStart && dst[-1] != '/')
                         dst--;
                     continue;
