@@ -1,3 +1,15 @@
+2011-02-07  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Relative .. in URL paths shouldn't skip adjacent / characters
+        https://bugs.webkit.org/show_bug.cgi?id=53907
+
+        Add some more test cases.
+
+        * fast/url/path-expected.txt:
+        * fast/url/script-tests/path.js:
+
 2011-02-07  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Antti Koivisto.
